--- a/index.html
+++ b/index.html
@@ -12,47 +12,40 @@
   <div class="controls">
     <select id="curriculum">
       <option value="">커리큘럼 선택</option>
-      <option value="ART BOOK DESIGN LV.1">ART BOOK DESIGN LV.1</option>
-      <option value="ART BOOK DESIGN LV.2">ART BOOK DESIGN LV.2</option>
-      <option value="ART BOOK DESIGN LV.3">ART BOOK DESIGN LV.3</option>
-      <option value="ART BOOK DESIGN LV.4">ART BOOK DESIGN LV.4</option>
-      <option value="ART BOOK DESIGN LV.5">ART BOOK DESIGN LV.5</option>
-      <option value="FOUNDATION">FOUNDATION</option>
-      <option value="DIPLOMA">DIPLOMA</option>
-      <option value="PICTURE BOOK EDITOR">PICTURE BOOK EDITOR</option>
-      <option value="DRAWING BASIC">DRAWING BASIC</option>
-      <option value="DRAWING PRO">DRAWING PRO</option>
-      <option value="DRAWING BOOK">DRAWING BOOK</option>
-      <option value="LANDSCAPE">LANDSCAPE</option>
-      <option value="DRAWING ANIMATION BASIC">DRAWING ANIMATION BASIC</option>
-      <option value="DRAWING ANIMATION PRO">DRAWING ANIMATION PRO</option>
-      <option value="STORY CRAFTING">STORY CRAFTING</option>
-      <option value="ART ESSAY">ART ESSAY</option>
-      <option value="IDENTITY BOOK">IDENTITY BOOK</option>
-      <option value="PUBLISHING">PUBLISHING</option>
-      <option value="GOODS DESIGN">GOODS DESIGN</option>
-      <option value="EMOTICON DESIGN">EMOTICON DESIGN</option>
-      <option value="SCRATCH BASIC">SCRATCH BASIC</option>
-      <option value="SCRATCH PRO">SCRATCH PRO</option>
-      <option value="HTML BASIC">HTML BASIC</option>
-      <option value="HTML PRO">HTML PRO</option>
-      <option value="JAVASCRIPT BASIC">JAVASCRIPT BASIC</option>
-      <option value="JAVASCRIPT PRO">JAVASCRIPT PRO</option>
+      <option value="ART BOOK DESIGN COURSE">ART BOOK DESIGN COURSE</option>
+      <option value="AFFINITY DESIGN FOUNDATION">AFFINITY DESIGN FOUNDATION</option>
+      <option value="AFFINITY DESIGN DIPLOMA">AFFINITY DESIGN DIPLOMA</option>
+      <option value="PICTURE BOOK COURSE">PICTURE BOOK COURSE</option>
+      <option value="DIGITAL DRAWING BASIC">DIGITAL DRAWING BASIC</option>
+      <option value="DIGITAL DRAWING PRO">DIGITAL DRAWING PRO</option>
+      <option value="DIGITAL DRAWING BOOK">DIGITAL DRAWING BOOK</option>
+      <option value="DIGITAL DRAWING LANDSCAPE">DIGITAL DRAWING LANDSCAPE</option>
+      <option value="DIGITAL DRAWIGN ANIMATION BASIC">DIGITAL DRAWIGN ANIMATION BASIC</option>
+      <option value="DIGITAL DRAWING ANIMATION PRO">DIGITAL DRAWING ANIMATION PRO</option>
+      <option value="MESSAGE DESIGN STORY CRAFTING">MESSAGE DESIGN STORY CRAFTING</option>
+      <option value="MESSAGE DESIGN ART ESSAY">MESSAGE DESIGN ART ESSAY</option>
+      <option value="MESSAGE DESIGN IDENTITY BOOK">MESSAGE DESIGN IDENTITY BOOK</option>
+      <option value="MESSAGE DESIGN PUBLISHING">MESSAGE DESIGN PUBLISHING</option>
+      <option value="CHARACTER IP GOODS DESIGN">CHARACTER IP GOODS DESIGN</option>
+      <option value="CHARACTER IP EMOTICON DESIGN">CHARACTER IP EMOTICON DESIGN</option>
+      <option value="CODE DESIGN SCRATCH BASIC">CODE DESIGN SCRATCH BASIC</option>
+      <option value="CODE DESIGN SCRATCH PRO">CODE DESIGN SCRATCH PRO</option>
+      <option value="CODE DESIGN PLAY BOOK">CODE DESIGN PLAY BOOK</option>
+      <option value="CODE DESIGN HTML BASIC">CODE DESIGN HTML BASIC</option>
+      <option value="CODE DESIGN HTML PRO">CODE DESIGN HTML PRO</option>
+      <option value="CODE DESIGN JAVASCRIPT BASIC">CODE DESIGN JAVASCRIPT BASIC</option>
+      <option value="CODE DESIGN JAVASCRIPT PRO">CODE DESIGN JAVASCRIPT PRO</option>
       <option value="AFFINITY DESIGNER">AFFINITY DESIGNER</option>
       <option value="AFFINITY PHOTO">AFFINITY PHOTO</option>
       <option value="AFFINITY MASTER">AFFINITY MASTER</option>
-      <option value="VIDEO BASIC">VIDEO BASIC</option>
-      <option value="VIDEO PRO">VIDEO PRO</option>
-      <option value="BOOK ANIMATION">BOOK ANIMATION</option>
-      <option value="MOTIONFOLIO">MOTIONFOLIO</option>
+      <option value="MOTION GRAPHICS VIDEO BASIC">MOTION GRAPHICS VIDEO BASIC</option>
+      <option value="MOTION GRAPHICS VIDEO PRO">MOTION GRAPHICS VIDEO PRO</option>
+      <option value="MOTION GRAPHICS BOOK ANIMATION">MOTION GRAPHICS BOOK ANIMATION</option>
+      <option value="MOTION GRAPHICS PORTFOLIO">MOTION GRAPHICS PORTFOLIO</option>
       <option value="MARKETING MANAGEMENT">MARKETING MANAGEMENT</option>
-      <option value="SUMMER DIGITAL DRAWING">SUMMER DIGITAL DRAWING</option>
-      <option value="WINTER DIGITAL DRAWING">WINTER DIGITAL DRAWING</option>
-      <option value="EASTER HOLIDAY DRAWING">EASTER HOLIDAY DRAWING</option>
-      <option value="WEB PRO MASTER">WEB PRO MASTER</option>
-      <option value="PROFILE WEB SITE">PROFILE WEB SITE</option>
-      <option value="PERSONAL BRANDING">PERSONAL BRANDING</option>
-
+      <option value="WEB DESIGN PRO MASTER">WEB DESIGN PRO MASTER</option>
+      <option value="WEB DESIGN PROFILE PORTFOLIO">WEB DESIGN PROFILE PORTFOLIO</option>
+      <option value="IDENTITY BRAND DESIGN COURSE">IDENTITY BRAND DESIGN COURSE</option>
     </select>
     <input type="text" id="name" placeholder="이름 입력" />
     <input type="date" id="date" />
