--- a/index.html
+++ b/index.html
@@ -11,57 +11,20 @@
 <body>
   <div class="controls">
     <select id="curriculum">
-      <option value="">커리큘럼 선택</option>
-      <optgroup label="PICTURE BOOK DESIGN">
-        <option value="ART BOOK DESIGN COURSE">ART BOOK DESIGN COURSE</option>
-        <option value="AFFINITY DESIGN FOUNDATION">AFFINITY DESIGN FOUNDATION</option>
-        <option value="AFFINITY DESIGN DIPLOMA">AFFINITY DESIGN DIPLOMA</option>
+      <option value="">코스 선택</option>
+      <option value="ART BOOK DESIGN COURSE">ART BOOK DESIGN COURSE</option>
         <option value="PICTURE BOOK COURSE">PICTURE BOOK COURSE</option>
-      </optgroup>
-      <optgroup label="DIGITAL DRAWING">
-        <option value="DIGITAL DRAWING BASIC">DIGITAL DRAWING BASIC</option>
-        <option value="DIGITAL DRAWING PRO">DIGITAL DRAWING PRO</option>
-        <option value="DIGITAL DRAWING BOOK">DIGITAL DRAWING BOOK</option>
-        <option value="DIGITAL DRAWING LANDSCAPE">DIGITAL DRAWING LANDSCAPE</option>
-        <option value="DIGITAL DRAWIGN ANIMATION BASIC">DIGITAL DRAWIGN ANIMATION BASIC</option>
-        <option value="DIGITAL DRAWING ANIMATION PRO">DIGITAL DRAWING ANIMATION PRO</option>
-      </optgroup>
-      <optgroup label="MESSAGE DESIGN">
-        <option value="MESSAGE DESIGN STORY CRAFTING">MESSAGE DESIGN STORY CRAFTING</option>
-        <option value="MESSAGE DESIGN ART ESSAY">MESSAGE DESIGN ART ESSAY</option>
-        <option value="MESSAGE DESIGN IDENTITY BOOK">MESSAGE DESIGN IDENTITY BOOK</option>
-        <option value="MESSAGE DESIGN PUBLISHING">MESSAGE DESIGN PUBLISHING</option>
-      </optgroup>
-      <optgroup label="CHARACTER IP DESIGN">
-        <option value="CHARACTER IP GOODS DESIGN">CHARACTER IP GOODS DESIGN</option>
-        <option value="CHARACTER IP EMOTICON DESIGN">CHARACTER IP EMOTICON DESIGN</option>
-      </optgroup>
-      <optgroup label="CODE DESIGN">
-        <option value="CODE DESIGN SCRATCH BASIC">CODE DESIGN SCRATCH BASIC</option>
-        <option value="CODE DESIGN SCRATCH PRO">CODE DESIGN SCRATCH PRO</option>
-        <option value="CODE DESIGN PLAY BOOK">CODE DESIGN PLAY BOOK</option>
-        <option value="CODE DESIGN HTML BASIC">CODE DESIGN HTML BASIC</option>
-        <option value="CODE DESIGN HTML PRO">CODE DESIGN HTML PRO</option>
-        <option value="CODE DESIGN JAVASCRIPT BASIC">CODE DESIGN JAVASCRIPT BASIC</option>
-        <option value="CODE DESIGN JAVASCRIPT PRO">CODE DESIGN JAVASCRIPT PRO</option>
-      </optgroup>
-      <optgroup label="BRAND DESIGN">
-        <option value="AFFINITY DESIGNER">AFFINITY DESIGNER</option>
-        <option value="AFFINITY PHOTO">AFFINITY PHOTO</option>
-        <option value="AFFINITY MASTER">AFFINITY MASTER</option>
-      </optgroup>
-      <optgroup label="MOTION GRAPHICS">
-        <option value="MOTION GRAPHICS VIDEO BASIC">MOTION GRAPHICS VIDEO BASIC</option>
-        <option value="MOTION GRAPHICS VIDEO PRO">MOTION GRAPHICS VIDEO PRO</option>
-        <option value="MOTION GRAPHICS BOOK ANIMATION">MOTION GRAPHICS BOOK ANIMATION</option>
-        <option value="MOTION GRAPHICS PORTFOLIO">MOTION GRAPHICS PORTFOLIO</option>
-      </optgroup>
-      <optgroup label="WEB PRODUCER">
-        <option value="MARKETING MANAGEMENT">MARKETING MANAGEMENT</option>
-        <option value="WEB DESIGN PRO MASTER">WEB DESIGN PRO MASTER</option>
-        <option value="WEB DESIGN PROFILE PORTFOLIO">WEB DESIGN PROFILE PORTFOLIO</option>
+        <option value="DIGITAL DRAWING BOOK COURSE">DIGITAL DRAWING BOOK COURSE</option>
+        <option value="DIGITAL DRAWING ANIMATION COURSE">DIGITAL DRAWING ANIMATION COURSE</option>
+        <option value="MESSAGE DESIGN PUBLISHING COURSE">MESSAGE DESIGN PUBLISHING COURSE</option>
+        <option value="CHARACTER IP DESIGN COURSE">CHARACTER IP DESIGN COURSE</option>
+        <option value="VIDEO EDITING COURSE">VIDEO EDITING COURSE</option>
+        <option value="MOTION GRAPHICS COURSE">MOTION GRAPHICS COURSE</option>
+        <option value="MARKETING MANAGEMENT COURSE">MARKETING MANAGEMENT COURSE</option>
+        <option value="WEB PORTFOLIO COURSE">WEB PORTFOLIO COURSE</option>
         <option value="IDENTITY BRAND DESIGN COURSE">IDENTITY BRAND DESIGN COURSE</option>
-      </optgroup>
+        <option value="CODE DESIGN PLAY BOOK COURSE">CODE DESIGN PLAY BOOK COURSE</option>
+        <option value="CODE DESIGN JAVASCRIPT COURSE">CODE DESIGN JAVASCRIPT COURSE</option>
     </select>
     <input type="text" id="name" placeholder="이름 입력" />
     <input type="date" id="date" />
